syntax = "proto3";

package com.road.yishi.proto.campaign;

message SpacePlayerArmyInfoReqMsg {
  repeated int32 userList = 1;
}
